--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,6 @@
     --primary-color: #1a1a1a;
     --secondary-color: #f4f4f4;
     --accent-color: #d4af37;
-    /* Gold */
     --text-color: #333;
     --light-text-color: #fff;
 }
@@ -18,7 +17,6 @@
 
 body {
     background-color: #f0eded;
-
 }
 
 .myinfo {
@@ -56,6 +54,14 @@ img {
     height: auto;
     display: inline-block;
 }
+
+
+.projects{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 /* Sections Styling */
 section {
     padding: 80px 0;
